--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -108,6 +108,23 @@ select {
   font: inherit;
 }
 
+/* Custom scrollbar */
+
+::-webkit-scrollbar-track {
+  border-radius: 0.7rem;
+  background-color: lighten($bg-alt, 2%);
+}
+
+::-webkit-scrollbar {
+  width: 0.8rem;
+  background-color: lighten($bg-alt, 2%);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 0.7rem;
+  background-color: $footer-text;
+}
+
 /* Remove all animations and transitions for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   * {
